@@ -1,8 +1,6 @@
- - implement new[]/delete[] for managed_base
- 
+ - operator new[]/do_delete_arr should work with built in types correctly
  - implement shared memory segment allocator
- - finish implementation of offset_pointer
- 
+
  - implement offset_pointer unit tests 
  - complete implementation of unit tests for type manipulation library
  - remove simple_ptr
