@@ -33,16 +33,27 @@ namespace memory_mgr
 	{
 		template
 		<
-			class MgrType,
+			class MemMgr,
 			class PointerConvSupp,
 			class SizeTrackingSupp
 		>
 		struct new_helpers
 		{
-			static inline void* new_impl( size_t size, MgrType& mgr )
+			typedef MemMgr mgr_type;
+			static inline void* new_impl( size_t size, mgr_type& mgr )
 			{
 				STATIC_ASSERT( false, Invalid_manager_type )
 			}
+			
+			static inline void delete_impl( void* p, mgr_type& mgr )
+			{
+				STATIC_ASSERT( false, Invalid_manager_type )
+			}
+			
+			static inline void delete_arr_impl( void* p, mgr_type& mgr )
+			{
+				STATIC_ASSERT( false, Invalid_manager_type )
+			}			
 		};
 
 		template< class MemMgr >
@@ -55,9 +66,23 @@ namespace memory_mgr
 				return mgr.allocate( size );
 			}
 
-			static inline void delete_impl( void* p, mgr_type& mgr )
+			template<class T>
+			static inline void delete_impl( T* p, mgr_type& mgr )
 			{
+				p->~T();
 				return mgr.deallocate( p );
+			}
+
+			template<class T>
+			static inline void delete_arr_impl( T* p, mgr_type& mgr )
+			{				
+				size_t* count = size_cast(p) - 1;
+				for( size_t i = 0; i < *count; ++i )
+				{
+					p[i].~T();
+				}
+				//count - points to real memory address
+				return mgr.deallocate( count );
 			}
 		};
 	
@@ -69,6 +94,16 @@ namespace memory_mgr
 		public:
 			typedef MemMgr mgr_type;
 
+			typedef typename memory_mgr::is_category_supported
+				<
+					mgr_type, typename memory_mgr::pointer_convertion_tag
+				>::result supports_pointer_conv;
+
+			typedef typename memory_mgr::is_category_supported
+				<
+					mgr_type, typename memory_mgr::size_tracking_tag
+				>::result supports_size_tracking;
+
 			mutable mgr_type& m_mgr;
 			mem_mgr_helper( mgr_type& mgr )
 				:m_mgr( mgr )
@@ -79,19 +114,87 @@ namespace memory_mgr
 	}
 
 	template<class MemMgr>
-	detail::mem_mgr_helper<MemMgr> mem_mgr( MemMgr& mgr )
+	static inline detail::mem_mgr_helper<MemMgr> mem_mgr( MemMgr& mgr )
 	{
-		return detail::mem_mgr_helper<MemMgr>( mgr );
+		typedef MemMgr mgr_type;
+		return detail::mem_mgr_helper<mgr_type>( mgr );
 	};
 }
-
 
 template<class MemMgr>
 void* operator new( size_t size, const memory_mgr::detail::mem_mgr_helper<MemMgr>& mgr )
 {
 	typedef MemMgr mgr_type;
-	return memory_mgr::detail::new_helpers<mgr_type, typename memory_mgr::is_category_supported<mgr_type, typename memory_mgr::size_tracking_tag>::result,
-		typename memory_mgr::is_category_supported<mgr_type, typename memory_mgr::pointer_convertion_tag>::result>::new_impl( size, mgr.m_mgr );
+	typedef memory_mgr::detail::mem_mgr_helper<mgr_type> mgr_helper_type;
+	typedef memory_mgr::detail::new_helpers
+		<
+			mgr_type,
+			typename mgr_helper_type::supports_size_tracking,
+			typename mgr_helper_type::supports_pointer_conv
+		> helper_type;
+	
+	return helper_type::new_impl( size, mgr.m_mgr );
 }
+
+template<class MemMgr>
+void* operator new[]( size_t size, const memory_mgr::detail::mem_mgr_helper<MemMgr>& mgr )
+{
+	typedef MemMgr mgr_type;
+	typedef memory_mgr::detail::mem_mgr_helper<mgr_type> mgr_helper_type;
+	typedef memory_mgr::detail::new_helpers
+		<
+		mgr_type,
+		typename mgr_helper_type::supports_size_tracking,
+		typename mgr_helper_type::supports_pointer_conv
+		> helper_type;
+
+	return helper_type::new_impl( size, mgr.m_mgr );
+}
+
+template<class MemMgr>
+void do_delete( memory_mgr::managed_base<MemMgr>* p, const memory_mgr::detail::mem_mgr_helper<MemMgr>& mgr )
+{
+	//typedef MemMgr mgr_type;
+	delete p;
+}
+
+template<class T, class MemMgr>
+void do_delete( T* p, const memory_mgr::detail::mem_mgr_helper<MemMgr>& mgr )
+{
+	typedef MemMgr mgr_type;
+	typedef memory_mgr::detail::mem_mgr_helper<mgr_type> mgr_helper_type;
+	typedef memory_mgr::detail::new_helpers
+		<
+		mgr_type,
+		typename mgr_helper_type::supports_size_tracking,
+		typename mgr_helper_type::supports_pointer_conv
+		> helper_type;
+
+	
+	return helper_type::delete_impl( p, mgr.m_mgr );
+}
+
+template<class T, class MemMgr>
+void do_delete_arr( T* p, const memory_mgr::detail::mem_mgr_helper<MemMgr>& mgr )
+{
+	typedef MemMgr mgr_type;
+	typedef memory_mgr::detail::mem_mgr_helper<mgr_type> mgr_helper_type;
+	typedef memory_mgr::detail::new_helpers
+		<
+		mgr_type,
+		typename mgr_helper_type::supports_size_tracking,
+		typename mgr_helper_type::supports_pointer_conv
+		> helper_type;
+
+
+	return helper_type::delete_arr_impl( p, mgr.m_mgr );
+}
+
+// template<class MemMgr>
+// void do_delete( memory_mgr::managed_base<MemMgr> p[], const memory_mgr::detail::mem_mgr_helper<MemMgr>& mgr )
+// {
+// 	typedef MemMgr mgr_type;
+// 	delete[] p;
+// }
 
 #endif //MGR_NEW_HEADER
